# dfa-trading-platform

./: .gitignore  ACCEPTANCE_TESTING.md  K8S_GUIDE.md  README.md  RUN.md  SOLANA_SETUP.md  docker-compose.yml  init-db.sql  settings.gradle
api-gateway-service/: Dockerfile  build.gradle
api-gateway-service/src/main/java/org/artmotika/apigatewayservice/: ApiGatewayServiceApplication.java
api-gateway-service/src/main/resources/: application.yaml
api-gateway-service/src/test/java/org/artmotika/apigatewayservice/: ApiGatewayApplicationTests.java  OrderIntegrationTest.java
api-gateway-service/src/test/resources/: application.yaml
auth-service/: Dockerfile  build.gradle
auth-service/src/main/resources/: application.yaml
auth-service/src/main/resources/db/changelog/: db.changelog-auth.sql
common/: build.gradle
docs/: ACCEPTANCE_TESTING.md  LOCAL_DEPLOYMENT_GUIDE.md  RUN.md
k8s-manifests/: api-gateway-deployment.yaml  auth-deployment.yaml  solana-connector-deployment.yaml  trading-engine-deployment.yaml
k8s-manifests/infra/: kafka.yaml  monitoring.yaml  postgres.yaml
smart-contract/: Cargo.toml  lib.rs
smart-contract/src/: lib.rs  tests.rs
solana-connector-service/: Dockerfile  build.gradle
solana-connector-service/src/main/resources/: application.yaml
trading-engine-service/: Dockerfile  build.gradle
trading-engine-service/src/main/resources/: application.yaml
trading-engine-service/src/main/resources/db/changelog/: db.changelog-master.sql
trading-engine-service/src/test/resources/: application-test.yaml
(+75 files in other folders)
