[package]
name = "dfa_advanced_platform"
version = "0.1.0"
description = "Advanced DFA Platform Smart Contract"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dfa_advanced_platform"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.17.0"
borsh = "0.10.3"

[dev-dependencies]
# For tests
anchor-client = "0.29.0"
